# OpenYield

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  WIRING.md  demo.py  generate_images.py  pyproject.toml  railway.toml  run.py  run_pipeline.py  seed_demo.py
.github/workflows/: ci.yml
dataset/: README.md
docs/: api-reference.md  architecture.md  comparison-vs-commercial.md  development.md  getting-started.md  roadmap.md  semi-compliance.md  whitepaper.md
docs/adr/: ADR-001-substrate-agnostic-unified-schema.md  ADR-002-sqlite-postgresql-dual-backend.md  ADR-003-klarf-native-parser-no-proprietary-libraries.md  ADR-004-pure-python-dbscan-no-sklearn.md  ADR-005-three-yield-models-with-empirical-alpha.md  ADR-006-logistic-regression-over-deep-learning-for-classifier.md
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
openyield/: __init__.py  defect_types.py
openyield/ai/: __init__.py  classifier.py  cnn_classifier.py
openyield/analysis/: __init__.py  bin_analysis.py  clustering.py  correlation.py  genealogy.py  lot_tracker.py  pareto.py  signatures.py  spc.py  trend.py
openyield/api/: __init__.py  main.py  (+2 more)
scripts/: export_dataset.py  validate_yield_models.py
tests/: conftest.py  test_adapters.py  test_advanced_analysis.py  test_ai_classifier.py  test_analysis.py  test_bin_analysis.py  test_checks.py  test_cnn_classifier.py  test_critical_area.py  test_genealogy.py  test_generator.py  test_image_generator.py  test_ingest.py  test_klarf2_adapter.py  test_learning_curve.py  test_monte_carlo.py  test_openmes_connector.py  test_pareto_extended.py  test_pipeline.py  test_spatial_predictor.py  test_spc_extended.py  test_substrate_profiles.py  test_trend.py  test_yield_engine.py
(+64 files in other folders)
