[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openyield"
version = "0.1.0"
description = "Open-source semiconductor inspection data platform for silicon wafer and glass panel manufacturing — CHIPS Act"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = [
    "semiconductor", "inspection", "defect", "yield", "CHIPS Act",
    "silicon wafer", "glass panel", "OLED", "CHIPS Act", "KLARF", "semiconductor yield"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "numpy>=1.26",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/openyield/openyield"
Repository = "https://github.com/openyield/openyield"
Issues = "https://github.com/openyield/openyield/issues"

[project.scripts]
openyield-pipeline = "openyield.run_pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["openyield*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
